<resources>
    <string name="app_name">Hiring Application</string>
    <string name="icon_application_bisa_kerja">Icon Application Bisa Kerja</string>
    <string name="icon_tumbs_up">Icon tumbs up</string>
    <string name="bisa_kerja">Bisa Kerja</string>
    <string name="description_bisa_kerja">Temukan karir impian anda dengan menggunakan aplikasi Bisa Kerja</string>
    <string name="tv_welcome">Welcome To \n Bisa Kerja</string>
    <string name="user_name">Username or ID</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_bisa_kerja">Register\nBisa Kerja</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday (dd-mm-yyyy)</string>
    <string name="address">Address</string>
    <string name="last_education">Last Education</string>
    <string name="submit">SUBMIT</string>
    <string name="form_input_data_diri">Form Input Data Diri</string>
    <string name="version">version 1.0.0</string>
    <string name="negotiation_image">Negotiation Image</string>
    <string name="onboard_find_your_job">Find your dream job</string>
    <string name="onboard_description">Dengan aplikasi Bisa Kerja, kamu akan mendapatkan akses ke jutaan lowongan kerja yang sedang tersedia saat ini</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_image">profile image</string>
    <string name="your_profile">Your Profile</string>
    <string name="name">Name</string>
</resources>