<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:padding="24dp"
    tools:context=".activity.ProfileActivity">

    <ImageView
        android:id="@+id/iv_image_profile"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/businessman" />

    <TextView
        android:id="@+id/tv_profile_tittle"
        style="@style/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        app:layout_constraintBottom_toBottomOf="@+id/iv_image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/iv_image_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_image_profile" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_profile" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/tv_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/tv_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/tv_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/tv_last_education"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

    <TextView
        android:id="@+id/tv_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_gender_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_gender" />

    <TextView
        android:id="@+id/tv_address_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_phone_number_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_number" />

    <TextView
        android:id="@+id/tv_birthday_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_birthday" />

    <TextView
        android:id="@+id/tv_last_education_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_last_education"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_last_education" />

    <TextView
        android:id="@+id/tv_last_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_education"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birthday" />

</androidx.constraintlayout.widget.ConstraintLayout>